[package]
name = "fil_actor_fluence"
description = "Builtin account actor for Filecoin"
version = "11.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { version = "11.0.0", path = "../../runtime" }
frc42_dispatch = "3.2.0"
fvm_actor_utils = "6.0.0"
fvm_shared = { version = "3.2.0", default-features = false }
fvm_sdk = {version = "3.2.0"}
#fvm_sdk = { path = "../../../ref-fvm/sdk" }
#fvm_shared = { path = "../../../ref-fvm/shared"}
serde = { version = "1.0.136", features = ["derive"] }
num-traits = "0.2.14"
num-derive = "0.3.3"
fvm_ipld_blockstore = "0.1.1"
log = "0.4.14"
fvm_ipld_encoding = "0.3.3"
#fvm_ipld_encoding = { path = "../../../ref-fvm/ipld/encoding" }
anyhow = "1.0.65"
#fluence-fvm-sdk = {version = "0.1.0", path = "../../../fluence-fvm-sdk"}
fluence-fvm-sdk = {version = "0.1.0", git = "https://github.com/fluencelabs/fluence-fvm-sdk" }

[dev-dependencies]
fil_actors_runtime = { path = "../../runtime", features = ["test_utils", "sector-default"] }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
